{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 54,
  "lineage": "4271d78b-1fb6-47a6-718c-7895ad269196",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0df668a02ab63dc04",
            "public_dns": "ec2-13-235-203-125.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.203.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "eip-ukd-micro-prod",
              "kubernetes.io/cluster/ukd-micro-prod": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cec194387ee70f86",
            "owner_id": "858939373355",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "ukd-micro-prod",
              "kubernetes.io/cluster/ukd-micro-prod": "owned"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df668a02ab63dc04",
            "id": "nat-0feeb4216af2a48c5",
            "network_interface_id": "eni-00111c7f74d846168",
            "private_ip": "10.0.5.96",
            "public_ip": "13.235.203.125",
            "subnet_id": "subnet-0669ca9884d7ffa9b",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "nat-gw-ukd-micro-prod",
              "kubernetes.io/cluster/ukd-micro-prod": "owned"
            }
          },
          "depends_on": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d9ab80371a7a5b76",
            "owner_id": "858939373355",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0feeb4216af2a48c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "private-ukd-micro-prod-rtb",
              "kubernetes.io/cluster/ukd-micro-prod": "owned"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-093b56046535bd58f",
            "owner_id": "858939373355",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cec194387ee70f86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "public-ukd-micro-prod-rtb",
              "kubernetes.io/cluster/ukd-micro-prod": "owned"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd620cf78964077b",
            "route_table_id": "rtb-0d9ab80371a7a5b76",
            "subnet_id": "subnet-0632f1a6f3acb8ed2"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0901cbb4de370ceae",
            "route_table_id": "rtb-0d9ab80371a7a5b76",
            "subnet_id": "subnet-0bdd248da7d4d75c8"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f5146668706c03f",
            "route_table_id": "rtb-0d9ab80371a7a5b76",
            "subnet_id": "subnet-0cba4f878bb1d98be"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e649d24a7c89a44",
            "route_table_id": "rtb-093b56046535bd58f",
            "subnet_id": "subnet-0669ca9884d7ffa9b"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e751c544b1eca32",
            "route_table_id": "rtb-093b56046535bd58f",
            "subnet_id": "subnet-04fa3ec5b0e4bdfb3"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3ec71ae09d83a25",
            "route_table_id": "rtb-093b56046535bd58f",
            "subnet_id": "subnet-056c2be1475870a17"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_nodes_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:security-group/sg-04baccab2f8ef9a81",
            "description": "Master nodes security group",
            "egress": [],
            "id": "sg-04baccab2f8ef9a81",
            "ingress": [],
            "name": "masters-ukd-micro-prod",
            "name_prefix": null,
            "owner_id": "858939373355",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "masters-ukd-micro-prod",
              "kubernetes.io/cluster/ukd-micro-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:security-group/sg-04252245c7ad94ca5",
            "description": "Security group for all worker nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04252245c7ad94ca5",
            "ingress": [],
            "name": "nodes-ukd-micro-prod",
            "name_prefix": null,
            "owner_id": "858939373355",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "nodes-ukd-micro-prod",
              "kubernetes.io/cluster/ukd-micro-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_egress_workers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic to worker nodes",
            "from_port": 10250,
            "id": "sgrule-3950761997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04baccab2f8ef9a81",
            "self": false,
            "source_security_group_id": "sg-04252245c7ad94ca5",
            "to_port": 65535,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.master_nodes_sg",
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_ingress_workers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API server",
            "from_port": 443,
            "id": "sgrule-1605026038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04baccab2f8ef9a81",
            "self": false,
            "source_security_group_id": "sg-04252245c7ad94ca5",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master_nodes_sg",
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-818831211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04252245c7ad94ca5",
            "self": false,
            "source_security_group_id": "sg-04baccab2f8ef9a81",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master_nodes_sg",
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2487092860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04252245c7ad94ca5",
            "self": false,
            "source_security_group_id": "sg-04252245c7ad94ca5",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:subnet/subnet-0632f1a6f3acb8ed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-0632f1a6f3acb8ed2",
            "map_public_ip_on_launch": false,
            "owner_id": "858939373355",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "ap-south-1a-ukd-micro-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ukd-micro-prod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:subnet/subnet-0bdd248da7d4d75c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.96.0/19",
            "id": "subnet-0bdd248da7d4d75c8",
            "map_public_ip_on_launch": false,
            "owner_id": "858939373355",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "ap-south-1b-ukd-micro-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ukd-micro-prod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:subnet/subnet-0cba4f878bb1d98be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-0cba4f878bb1d98be",
            "map_public_ip_on_launch": false,
            "owner_id": "858939373355",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "ap-south-1c-ukd-micro-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ukd-micro-prod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:subnet/subnet-0669ca9884d7ffa9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/21",
            "id": "subnet-0669ca9884d7ffa9b",
            "map_public_ip_on_launch": false,
            "owner_id": "858939373355",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "utility-ap-south-1a-ukd-micro-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/ukd-micro-prod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:subnet/subnet-04fa3ec5b0e4bdfb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/21",
            "id": "subnet-04fa3ec5b0e4bdfb3",
            "map_public_ip_on_launch": false,
            "owner_id": "858939373355",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "utility-ap-south-1b-ukd-micro-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/ukd-micro-prod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:subnet/subnet-056c2be1475870a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.16.0/21",
            "id": "subnet-056c2be1475870a17",
            "map_public_ip_on_launch": false,
            "owner_id": "858939373355",
            "tags": {
              "KubernetesCluster": "ukd-micro-prod",
              "Name": "utility-ap-south-1c-ukd-micro-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/ukd-micro-prod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08cd2bb68f0320361"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:858939373355:vpc/vpc-08cd2bb68f0320361",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ccb58e49d52b438",
            "default_route_table_id": "rtb-03c5cde5fda8a1d78",
            "default_security_group_id": "sg-00e59d9a81279ec87",
            "dhcp_options_id": "dopt-d1e9f1b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08cd2bb68f0320361",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03c5cde5fda8a1d78",
            "owner_id": "858939373355",
            "tags": {
              "Name": "ukd-micro-prod",
              "kubernetes.io/cluster/ukd-micro-prod": "shared"
            }
          }
        }
      ]
    }
  ]
}